# FlightManagerLabNGTU

./: .env  .gitignore  docker-compose.yml  docker-less.env  run.bash  run.bat
client/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
client/src/cpp/models/: AirportModel.cpp  DispatcherModel.cpp  FlightModel.cpp  PlaneModel.cpp  PlaneModelResponse.cpp
client/src/cpp/presenter/: AirportPresenter.cpp  DispatcherPresenter.cpp  FlightPresenter.cpp  IdentityPresenter.cpp  PlanePresenter.cpp  TimePresenter.cpp
client/src/cpp/repos/: AirportRepository.cpp  DispatcherRepository.cpp  FlightRepository.cpp  IdentityRepository.cpp  PlaneRepository.cpp  TimeRepository.cpp  TokenRepository.cpp
client/src/cpp/utils/: ClientLogger.cpp
client/src/include/: Config.h  srclib.h
client/src/include/models/: AirportModel.h  DispatcherModel.h  FlightModel.h  PlaneModel.h  PlaneModelResponse.h  RoleModel.h
client/src/include/presentation/: AirportPresenter.h  DispatcherPresenter.h  FlightPresenter.h  IPresenter.h  IdentityPresenter.h  PlanePresenter.h  TimePresenter.h
client/src/include/repos/: AirportRepository.h  DispatcherRepository.h  FlightRepository.h  IdentityRepository.h  PlaneRepository.h  TimeRepository.h  TokenRepository.h
client/src/include/utils/: ClientLogger.h
client/test/: CMakeLists.txt  test1.cpp
database-service/: Dockerfile  build.gradle  service.bash  service.bat
database-service/src/main/java/com/flightmanager/databaseservice/: DatabaseServiceApplication.java
database-service/src/main/java/com/flightmanager/databaseservice/api/: AirportController.java  DispatcherController.java  FlightController.java  PlaneController.java
database-service/src/main/java/com/flightmanager/databaseservice/config/: PropertiesConfig.java  SwaggerConfig.java
database-service/src/main/java/com/flightmanager/databaseservice/models/: AirportModel.java  DispatcherModel.java  FlightModel.java  PlaneModel.java  RoleModel.java
database-service/src/main/java/com/flightmanager/databaseservice/repos/: AirportRepo.java  DispatcherRepo.java  FlightRepo.java  PlaneRepo.java
database-service/src/main/java/com/flightmanager/databaseservice/security/: SecurityConfig.java  ServiceAuthentication.java  ServiceAuthorizer.java  ServiceTokenFilter.java
database-service/src/main/resources/: application.properties  log4g.properties
database-service/src/main/resources/db/migration/: V1_0.0.1__init.sql
database-service/src/test/java/com/flightmanager/databaseservice/: DatabaseServiceApplicationTests.java
docs/: Отчет Полеты.docx  Презентация1.pptx
docs/deprecated/: project.drawio  Отчет.docx
docs/diagrams/: client-states-block-schema.drawio  project-api-architecture.drawio
docs/services-docs/: API Documentation database-service.docx  API Documentation identity-service.docx  Client documentation.docx  Plane-service Documentation.docx
gateway/: Dockerfile  build.gradle  service.bash  service.bat
gateway/src/main/java/com/ilyakrn/gateway/: GatewayApplication.java
gateway/src/main/java/com/ilyakrn/gateway/config/: CorsConfig.java  PropertiesConfig.java  RoutesConfig.java
gateway/src/main/java/com/ilyakrn/gateway/routes/: IdentityServiceRoutes.java  PlaneServiceRoutes.java
gateway/src/main/resources/: application.properties
gateway/src/test/java/com/ilyakrn/gateway/: GatewayApplicationTests.java
identity-service/: Dockerfile  build.gradle  service.bash  service.bat
identity-service/src/main/java/com/flightmanager/identityservice/: IdentityServiceApplication.java
identity-service/src/main/java/com/flightmanager/identityservice/api/: AuthController.java
identity-service/src/main/java/com/flightmanager/identityservice/config/: PropertiesConfig.java  ServiceConfig.java  SwaggerConfig.java
identity-service/src/main/java/com/flightmanager/identityservice/exception/: HTTP400Exception.java  HTTP401Exception.java  HTTP403Exception.java  HTTP500Exception.java  HTTPException.java
identity-service/src/main/java/com/flightmanager/identityservice/jwt/: JwtUtil.java  UserAuth.java
identity-service/src/main/resources/: application.properties
identity-service/src/test/java/com/flightmanager/identityservice/: IdentityServiceApplicationTests.java
node/: Dockerfile  package-lock.json  package.json  server.js
node/public/: index.html
node/public/css/: AirportPage.css  DispatcherPage.css  FlightPage.css  MainPage.css  PlanePage.css  StartPage.css
node/public/html/: AirportPage.html  DispatcherPage.html  FlightPage.html  MainPage.html  PlanePage.html  StartPage.html
node/public/js/: AirportPage.js  DispatcherPage.js  FlightPage.js  MainPage.js  PlanePage.js  StartPage.js
plane-service/: CMakeLists.txt  Dockerfile  service.bash  service.bat
plane-service/src/: main.cpp
plane-service/src/cpp/controllers/: AirportController.cpp  DispatcherController.cpp  FlightController.cpp  PlaneController.cpp  TimeController.cpp
plane-service/src/cpp/models/: AirportModel.cpp  DispatcherModel.cpp  FlightModel.cpp  PlaneModel.cpp  PlaneModelResponse.cpp
plane-service/src/cpp/repos/: AirportRepository.cpp  DispatcherRepository.cpp  FlightRepository.cpp  IdentityRepository.cpp  PlaneRepository.cpp  TimeRepository.cpp
plane-service/src/cpp/services/: AirportService.cpp  DispatcherService.cpp  FlightService.cpp  PlaneService.cpp  TimeService.cpp
plane-service/src/cpp/utils/: PlaneLogger.cpp
plane-service/src/header/controllers/: AirportController.h  Config.h  DispatcherController.h  FlightController.h  IController.h  PlaneController.h  TimeController.h
plane-service/src/header/models/: AirportModel.h  DispatcherModel.h  FlightModel.h  PlaneModel.h  PlaneModelResponse.h  RoleModel.h
plane-service/src/header/repos/: AirportRepository.h  DispatcherRepository.h  FlightRepository.h  IdentityRepository.h  PlaneRepository.h  TimeRepository.h
plane-service/src/header/services/: AirportService.h  DispatcherService.h  FlightService.h  PlaneService.h  TimeService.h
plane-service/src/header/utils/: PlaneLogger.h
(+12 files in other folders)
